Feat: Add Meta Tags, Fav Icon and Google Fonts import to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- SEO -->
+  <meta name="description" content="A higher or lower themed dice game">
+  <meta name="keywords" content="lucky, roll, dice, game, higher, lower">
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css">
+   <!-- Google fonts import -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+   <!-- Fav Icon -->
+   <link type="image/png" sizes="16x16" rel="icon" href="assets/images/favicon/icons8-dice-16.png">
+   <link type="image/png" sizes="32x32" rel="icon" href="assets/images/favicon/icons8-dice-32.png">
+   <link type="image/png" sizes="96x96" rel="icon" href="assets/images/favicon/icons8-dice-96.png">
+  <!-- Title -->
   <title>Higher or Lower Dice Game</title>
 </head>
 <body>
