Feat: Add header in index.html and style in style.css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
   <title>Higher or Lower Dice Game</title>
 </head>
 <body>
+  <header>
+    <h1 class="title">Higher or Lower Dice Game</h1>
+  </header>
+  <main>
+
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
