Feat: Add welcome page div and content to index.html and style in style.css. Add utility style classes for containers, buttons and lists

--- a/index.html
+++ b/index.html
@@ -21,9 +21,26 @@
 </head>
 <body>
   <header>
-    <h1 class="title">Higher or Lower Dice Game</h1>
+    <h1 id="title" class="container">Higher or Lower Dice Game</h1>
   </header>
   <main>
+    <!-- Welcome Page Container -->
+    <div id="welcome-page">
+      <div id="welcome-page-container">
+        <h2 id="welcome-page-slogan" class="container">Fancy your luck?</h2>
+        <div id="welcome-page-description" class="container">
+          <ol>
+            <li>Select a number of dice to roll</li>
+            <li>Guess if the next roll will be higher or lower than the previous roll</li>
+            <li>Each correct answer gives you a point to your current streak</li>
+            <li>If you get it wrong you will lose your streak</li>
+            <li>Click reset to change the number of dice</li>
+            <li>Try and get the highest streak!</li>
+          </ol>
+        </div>
+        <button id="start-btn" class="btn">Start</button>
+      </div>
+    </div>
 
   </main>
   <script src="script.js"></script>
