Feat: Add additional styling to welcome page div in style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-   <!-- Fav Icon -->
+   <!-- Fav Icons from: https://icons8.com/icons/set/dice -->
    <link type="image/png" sizes="16x16" rel="icon" href="assets/images/favicon/icons8-dice-16.png">
    <link type="image/png" sizes="32x32" rel="icon" href="assets/images/favicon/icons8-dice-32.png">
    <link type="image/png" sizes="96x96" rel="icon" href="assets/images/favicon/icons8-dice-96.png">
@@ -30,15 +30,14 @@
         <h2 id="welcome-page-slogan" class="container">Fancy your luck?</h2>
         <div id="welcome-page-description" class="container">
           <ol>
-            <li>Select a number of dice to roll</li>
             <li>Guess if the next roll will be higher or lower than the previous roll</li>
             <li>Each correct answer gives you a point to your current streak</li>
             <li>If you get it wrong you will lose your streak</li>
-            <li>Click reset to change the number of dice</li>
+            <li>Click reset to start again</li>
             <li>Try and get the highest streak!</li>
           </ol>
+          <button id="start-btn" class="btn">Start</button>
         </div>
-        <button id="start-btn" class="btn">Start</button>
       </div>
     </div>
 
