Feat: Add footer to index.html and add style in style.css. Add background gradient to body.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     </div>
 
   </main>
+  <footer>
+    <p>Copyright Craig90Dev</p>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
