Feat: Add dice images to images folder. Add divs for game section with dice images div and buttons. Add styling to game section in sytle.css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
   <main>
     <!-- Welcome Page Container -->
-    <div id="welcome-page">
+    <div id="welcome-page" class="hide">
       <div id="welcome-page-container">
         <h2 id="welcome-page-slogan" class="container">Fancy your luck?</h2>
         <div id="welcome-page-description" class="container">
@@ -40,7 +40,17 @@
         </div>
       </div>
     </div>
-
+    <!-- Container for Game Section -->
+    <div id="game-page" class="">
+      <div id="game-page-container">
+       <div id="dice-images"></div>
+       <div id="higher-lower-btns">
+         <button id="lower-btn">Lower</button>
+         <button id="higher-btn">Higher</button>
+       </div>
+       <button id="reset-btn">Reset</button>
+      </div>
+    </div>
   </main>
   <footer>
     <p>Copyright Craig90Dev</p>
