Feat: Add startGame and resetGame functions to script.js. Add event listeners for start and reset button actions

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
   <main>
     <!-- Welcome Page Container -->
-    <div id="welcome-page" class="hide">
+    <div id="welcome-page" class="">
       <div id="welcome-page-container">
         <h2 id="welcome-page-slogan" class="container">Fancy your luck?</h2>
         <div id="welcome-page-description" class="container">
@@ -41,7 +41,7 @@
       </div>
     </div>
     <!-- Container for Game Section -->
-    <div id="game-page" class="">
+    <div id="game-page" class="hide">
       <div id="game-page-container">
        <div id="dice-images"></div>
        <div id="higher-lower-btns">
