Feat: Add JS code for generating random numbers function and checking player answers and updating current score functions

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
        <div id="score">0</div>
        <h3 class="score-streak-label">Streak: </h3>
        <div id="streak">0</div>
-       <h4 id="result" class="hide">Correct</h4>
+       <h4 id="result-area" class="hide"></h4>
       </div>
       <button id="reset-btn">Reset</button>
     </div>
