Feat: Add score reset to resetGame function and fix issue with results div not displaying correctly

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
        </div>
        <h3 class="score-streak-label">Score: </h3>
        <div id="score">0</div>
-       <h3 class="score-streak-label">Streak: </h3>
+       <h3 class="score-streak-label">Best Streak: </h3>
        <div id="streak">0</div>
-       <h4 id="result-area" class="hide"></h4>
+       <h4 id="result-area"></h4>
       </div>
       <button id="reset-btn">Reset</button>
     </div>
