Feat: Add code to display dice images from assets folder when called for by generated number and to change random number on reset button click in script.js

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div id="game-page" class="hide">
       <div id="game-page-container">
        <div id="dice-images"></div>
+       <div id="dice-number"></div>
        <div id="higher-lower-btns">
          <button id="lower-btn" class="higher-lower-btn" data-value="lower">Lower</button>
          <button id="higher-btn" class="higher-lower-btn" data-value="higher">Higher</button>
