Feat: Add additional styling to score area in style.css

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
          <button id="lower-btn" class="higher-lower-btn" data-value="lower">Lower</button>
          <button id="higher-btn" class="higher-lower-btn" data-value="higher">Higher</button>
        </div>
-       <h3 class="score-streak-label">Score: </h3>
-       <div id="score">0</div>
-       <h3 class="score-streak-label">Best Streak: </h3>
-       <div id="streak">0</div>
+       <div id="score-area">
+         <h3 class="score-streak-label">Score: </h3>
+         <div id="score" class="score-streak">0</div>
+         <h3 class="score-streak-label">Best Streak: </h3>
+         <div id="streak" class="score-streak">0</div>
+       </div>
        <h4 id="result-area"></h4>
       </div>
       <button id="reset-btn">Reset</button>
