Feat: Add additional code in script.js for adding a second dice and calculating the total of both dice for the user to guess against for a better user experience

--- a/index.html
+++ b/index.html
@@ -43,8 +43,18 @@
     <!-- Container for Game Section -->
     <div id="game-page" class="hide">
       <div id="game-page-container">
-       <div id="dice-images"></div>
-       <div id="dice-number"></div>
+        <div id="dice-image-container">
+          <div id="dice-image1"></div>
+          <div id="dice-image2"></div>
+        </div>
+        <div id="dice-number-container">
+            <div id="dice-number1"></div>
+            <div id="dice-number2"></div>
+        </div>
+        <div id="dice-total-container">
+          <h3 id="dice-total-label">Dice Total: </h3>
+          <div id="dice-total-score"></div>
+        </div>
        <div id="higher-lower-btns">
          <button id="lower-btn" class="higher-lower-btn" data-value="lower">Lower</button>
          <button id="higher-btn" class="higher-lower-btn" data-value="higher">Higher</button>
