Feat: Add images to assets folder  for page background different dice images for better user experience

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
         <h2 id="welcome-page-slogan" class="container">Fancy your luck?</h2>
         <div id="welcome-page-description" class="container">
           <ol>
+            <li>Click the Start button to roll the Dice</li>
             <li>Guess if the next roll will be higher or lower than the previous roll</li>
+            <li>The next number will never be the same as the current number</li>
             <li>Each correct answer gives you a point to your current streak</li>
             <li>If you get it wrong you will lose your streak</li>
-            <li>Click reset to start again</li>
+            <li>Click reset to start the game again, but careful, you will lose your best streak score</li>
             <li>Try and get the highest streak!</li>
           </ol>
           <button id="start-btn" class="btn">Start</button>
@@ -44,6 +46,7 @@
     <div id="game-page" class="hide">
       <div id="game-page-container">
         <div id="dice-image-container">
+          <!-- Images by <a href="https://pixabay.com/users/openclipart-vectors-30363/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=152174">OpenClipart-Vectors</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=152174">Pixabay</a> -->
           <div id="dice-image1"></div>
           <div id="dice-image2"></div>
         </div>
