Feat: Change title and header content in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- SEO -->
-  <meta name="description" content="A higher or lower themed dice game">
+  <meta name="description" content="A higher or lower themed dice roll game">
   <meta name="keywords" content="lucky, roll, dice, game, higher, lower">
   <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css">
@@ -17,11 +17,11 @@
    <link type="image/png" sizes="32x32" rel="icon" href="assets/images/favicon/icons8-dice-32.png">
    <link type="image/png" sizes="96x96" rel="icon" href="assets/images/favicon/icons8-dice-96.png">
   <!-- Title -->
-  <title>Higher or Lower Dice Game</title>
+  <title>Lucky Roll Dice Game</title>
 </head>
 <body>
   <header>
-    <h1 id="title" class="container">Higher or Lower Dice Game</h1>
+    <h1 id="title" class="container">Lucky Roll Dice Game</h1>
   </header>
   <main>
     <!-- Welcome Page Container -->
