Fix: Remove id="result-area" heading element and replace with paragraph element in order to fix issue with HTML validation

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
          <h3 class="score-streak-label">Best Streak: </h3>
          <div id="streak" class="score-streak">0</div>
        </div>
-       <h4 id="result-area"></h4>
+       <p id="result-area"></p>
       </div>
       <button id="reset-btn">Reset</button>
     </div>
