Feat: Add additional comments for footer and JS link in index.html

--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
       <button id="reset-btn">Reset</button>
     </div>
   </main>
+  <!-- Footer -->
   <footer>
     <p>Copyright Craig90Dev</p>
   </footer>
+  <!-- JS Link -->
   <script src="script.js"></script>
 </body>
 </html>
