Feat: Add scripts and styles folders to assets folder and place script.js and style.css files accordingly. Change links to both in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="A higher or lower themed dice roll game">
   <meta name="keywords" content="lucky, roll, dice, game, higher, lower">
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/styles/style.css">
    <!-- Google fonts import -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
   </header>
   <main>
     <!-- Welcome Page Container -->
-    <div id="welcome-page" class="">
+    <div id="welcome-page">
       <div id="welcome-page-container">
         <h2 id="welcome-page-slogan" class="container">Fancy your luck?</h2>
         <div id="welcome-page-description" class="container">
@@ -78,6 +78,6 @@
     <p>Copyright Craig90Dev</p>
   </footer>
   <!-- JS Link -->
-  <script src="script.js"></script>
+  <script src="assets/scripts/script.js"></script>
 </body>
 </html>
